k8s/manifest/basico/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: calicoelectronico  
spec:
  defaultBackend:
    service:
      name: web-server
      port:
        number: 80
