k8s/manifest/basico/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress2
  namespace: calicoelectronico  
spec:
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
